Alignment fix on mobile for status

--- a/src/index.sass
+++ b/src/index.sass
@@ -528,6 +528,8 @@ strong
   vertical-align: middle
   display: block
   display: flex
+  margin-left: auto
+  margin-right: auto
 
 .player-status__dot
   display: inline-block
